--- a/src/MusicPlayerOnline.Maui/Pages/PlaylistPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/PlaylistPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MusicPlayerOnline.Maui.Pages.PlaylistPage"
-             Title="PlaylistPage"
+             Title="xx"
              BackgroundColor="White">
     <StackLayout>
-        <Label Text="Playlist"
+        <Label Text="播放列表"
                 VerticalOptions="Center" 
                 HorizontalOptions="Center" />
     </StackLayout>
