--- a/src/MusicPlayerOnline.Maui/App.xaml
+++ b/src/MusicPlayerOnline.Maui/App.xaml
@@ -5,22 +5,7 @@
              x:Class="MusicPlayerOnline.Maui.App">
     <Application.Resources>
         <ResourceDictionary>
-
-            <Color x:Key="PrimaryColor">#512bdf</Color>
-            <Color x:Key="SecondaryColor">White</Color>
-
-            <Style TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryColor}" />
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
-            </Style>
-
-            <Style TargetType="Button">
-                <Setter Property="TextColor" Value="{DynamicResource SecondaryColor}" />
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="BackgroundColor" Value="{DynamicResource PrimaryColor}" />
-                <Setter Property="Padding" Value="14,10" />
-            </Style>
-
+            <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
