--- a/src/MusicPlayerOnline.Maui/App.xaml
+++ b/src/MusicPlayerOnline.Maui/App.xaml
@@ -5,7 +5,35 @@
              x:Class="MusicPlayerOnline.Maui.App">
     <Application.Resources>
         <ResourceDictionary>
-            <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml"/>
+            <!--<ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml"/>-->
+            <Style Class="FlyoutItemLayoutStyle"
+           TargetType="Layout"
+           ApplyToDerivedTypes="True">
+                <Setter Property="VisualStateManager.VisualStateGroups">
+                    <VisualStateGroupList>
+                        <VisualStateGroup x:Name="CommonStates">
+                            <VisualState x:Name="Normal">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor"
+                                    Value="{AppThemeBinding Dark=Transparent,Light=Transparent}" />
+                                    <Setter TargetName="FlyoutItemLabel"
+                                    Property="Label.TextColor"
+                                    Value="{AppThemeBinding Dark=#aa2116,Light=#ffd400}" />
+                                </VisualState.Setters>
+                            </VisualState>
+                            <VisualState x:Name="Selected">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor"
+                                    Value="{AppThemeBinding Dark=#333333,Light=#F5F6F7}" />
+                                    <Setter  TargetName="FlyoutItemLabel"
+                                     Property="Label.TextColor"
+                                     Value="#ef5b9c" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateGroupList>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
