--- a/src/MusicPlayerOnline.Maui/Pages/SearchPage.xaml
+++ b/src/MusicPlayerOnline.Maui/Pages/SearchPage.xaml
@@ -3,17 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:MusicPlayerOnline.Maui.ViewModels"
              x:Class="MusicPlayerOnline.Maui.Pages.SearchPage"
-             Title="SearchPage"
-             BackgroundColor="White">
+             Title="搜索">
 
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="LabelMusicSearching" TargetType="Label">
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding IsMusicSearching}" Value="True" TargetType="Label">
+                    <DataTrigger Binding="{Binding IsSearching}" Value="True" TargetType="Label">
                         <Setter Property="IsVisible" Value="true"/>
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding IsMusicSearching}" Value="false" TargetType="Label">
+                    <DataTrigger Binding="{Binding IsSearching}" Value="false" TargetType="Label">
                         <Setter Property="IsVisible" Value="false"/>
                     </DataTrigger>
                 </Style.Triggers>
@@ -21,60 +20,85 @@
 
             <Style x:Key="CollectionViewMusicSearchResultBlock"  TargetType="CollectionView">
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding IsMusicSearching}" Value="True" TargetType="CollectionView">
+                    <DataTrigger Binding="{Binding IsSearching}" Value="True" TargetType="CollectionView">
                         <Setter Property="IsVisible" Value="false"/>
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding IsMusicSearching}" Value="false" TargetType="CollectionView">
+                    <DataTrigger Binding="{Binding IsSearching}" Value="false" TargetType="CollectionView">
                         <Setter Property="IsVisible" Value="true"/>
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
         </ResourceDictionary>
-
     </ContentPage.Resources>
 
-    <ContentPage.Content>
-        <StackLayout Orientation="Vertical" BackgroundColor="#010101" >
-            <SearchBar Text="{Binding SearchKeyword}"
-                       SearchCommand="{Binding SearchCommand}"
-                ></SearchBar>
-            <Label x:Name="LblMsg" Padding="10,10,10,0" FontSize="16" Text="拼命查询中..." TextColor="#E0E0E0" HorizontalOptions="Center" Style="{StaticResource LabelMusicSearching}"></Label>
-            <CollectionView ItemsSource="{Binding MusicSearchResult}" SelectedItem="{Binding MusicSelectedResult}"  SelectionChangedCommand="{Binding SelectedChangedCommand}" SelectionMode="Single" Style="{StaticResource CollectionViewMusicSearchResultBlock}">
+    <ScrollView>
+        <StackLayout Margin="16">
+            <Grid ColumnDefinitions="auto,*"
+                  Margin="0,0,0,20">
+                <Label Text="搜索"
+                       Grid.Column="0"
+                       VerticalTextAlignment="Center"
+                       Margin="0,0,10,0" />
+                <SearchBar Text="{Binding SearchKeyword}"
+                           Grid.Column="1"
+                           SearchCommand="{Binding SearchCommand}" />
+            </Grid>
+
+
+            <Label Text="拼命查询中..."
+                   HorizontalOptions="Center"
+                   Style="{StaticResource LabelMusicSearching}"/>
+
+
+            <CollectionView ItemsSource="{Binding MusicSearchResult}" 
+                            SelectedItem="{Binding MusicSelectedResult}"  
+                            SelectionChangedCommand="{Binding SelectedChangedCommand}" 
+                            SelectionMode="Single" 
+                            Style="{StaticResource CollectionViewMusicSearchResultBlock}">
+
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Padding="10"
-                              RowDefinitions="*"
-                              ColumnDefinitions="35,*,24" 
-                              >
-                            <StackLayout Grid.Column="0">
-                                <Label Text="{Binding Platform}" BackgroundColor="#404040" TextColor="#DADADA" HorizontalTextAlignment="Center"/>
-                                <Label Text="{Binding Duration}" TextColor="#929292" FontSize="13" HorizontalTextAlignment="Center"/>
-                            </StackLayout>
-                            <StackLayout Grid.Column="1" Orientation="Vertical">
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding Name}" TextColor="#E0E0E0" FontSize="15"/>
-                                </StackLayout>
-                                <StackLayout Orientation="Horizontal">
-                                    <Label TextColor="#929292" FontSize="13">
-                                        <MultiBinding StringFormat="{}{0} - {1}">
-                                            <Binding Path="Artist" />
-                                            <Binding Path="Album" />
-                                        </MultiBinding>
-                                    </Label>
+                        <Grid ColumnDefinitions="40,60,300,300,300,*">
 
-                                </StackLayout>
-                            </StackLayout>
-                            <StackLayout Grid.Column="2" VerticalOptions="Center">
-                                <ImageButton BackgroundColor="Transparent" Source="plus_math" VerticalOptions="Center" HorizontalOptions="Center"
-                                             Aspect="AspectFill"
-                                             Command="{Binding AddToMyFavoriteCommand, Source={RelativeSource AncestorType={x:Type viewmodels:SearchResultPageViewModel}}}"		
-                                             CommandParameter="{Binding .}"/>
+                            <Label Text="{Binding Platform}"
+                                   Grid.Column="0" 
+                                   IsVisible="true"
+                                   VerticalOptions="Center"
+                                   LineBreakMode="TailTruncation"/>
+                            <Label Text="{Binding Duration}" 
+                                   Grid.Column="1" 
+                                   IsVisible="true"
+                                   VerticalOptions="Center"
+                                   LineBreakMode="TailTruncation"/>
+                            <Label Text="{Binding Name}" 
+                                   Grid.Column="2" 
+                                   IsVisible="true"
+                                   VerticalOptions="Center"
+                                   LineBreakMode="TailTruncation"/>
+                            <Label Text="{Binding Artist}" 
+                                   Grid.Column="3" 
+                                   IsVisible="true"
+                                   VerticalOptions="Center"
+                                   LineBreakMode="TailTruncation"/>
+                            <Label Text="{Binding Album}" 
+                                   Grid.Column="4" 
+                                   IsVisible="true"
+                                   VerticalOptions="Center"
+                                   LineBreakMode="TailTruncation"/>
+
+                            <StackLayout Grid.Column="5" VerticalOptions="Center">
+                                <Image Source="plus.png" Aspect="AspectFill" WidthRequest="30" HeightRequest="30">
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:SearchResultPageViewModel}}, Path=AddToMyFavoriteCommand}"		
+                                             CommandParameter="{Binding .}"></TapGestureRecognizer>
+                                    </Image.GestureRecognizers>
+                                </Image>                   
                             </StackLayout>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-        </StackLayout>
-    </ContentPage.Content>
 
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
